# shield

./: .env.example  .gitignore  Dockerfile  INSTALL_HERMES.md  README.md  avvia-hermes-ids-mock.bat  avvia-hermes-ids-silent.vbs  avvia-hermes-ids.bat  docker-compose.windows.yml  docker-compose.yml  ids_mcp_server.py  ids_report.py  install.bat  install.ps1  install.sh  pyproject.toml  query-ids.bat  register_mcp.bat  register_mcp.sh  requirements.txt
config/: config.yaml  known_hosts.yaml
docker/: Dockerfile  entrypoint.sh  prometheus.yml
plugins/: __init__.py  example_detector.py
src/: __init__.py  main.py
src/api/: __init__.py  metrics.py  server.py
src/api/routes/: events.py  health.py  status.py  whitelist.py
src/capture/: __init__.py  arp_poller.py  sniffer.py
src/core/: __init__.py  config.py  event.py  queue.py  rate_limiter.py  whitelist.py
src/detectors/: __init__.py  arp_spoof.py  base.py  new_host.py  port_scan.py  sensitive_ports.py  traffic_volume.py
src/gateway/: __init__.py  base.py  hermes_adapter.py  hermes_webhook_adapter.py  mock_adapter.py
tests/: __init__.py  conftest.py  test_detectors.py  test_event.py  test_gateway.py  test_queue.py  test_rate_limiter.py
